--- a/public_html/exercice-02.html
+++ b/public_html/exercice-02.html
@@ -10,8 +10,30 @@ and open the template in the editor.
         <link href="CSS/style.css" rel="stylesheet" type="text/css"/>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script>
+            function init() {
+                var dt = new Date();
+                var horloge = document.querySelector('#horloge');
+                var options = {
+                    weekday: 'long',
+                    year: 'numeric', 
+                    month: 'long',
+                    day: 'numeric',
+                    hour: '2-digit',
+                    minute: '2-digit',
+                    second: '2-digit'};
+                
+                var lang = navigator.language;
+                            
+                horloge.innerHTML = dt.toLocaleDateString(lang, options);
+                window.setTimeout(init, 1000);
+            }
+            window.addEventListener('load', init);
+         </script>
     </head>
     <body>
-        <div>TODO write content</div>
+        <div id='page'>
+            <div id='horloge'></div>
+        </div>
     </body>
 </html>
