--- a/public_html/exercice-09.html
+++ b/public_html/exercice-09.html
@@ -7,7 +7,7 @@ and open the template in the editor.
 <html>
 
     <head>
-        <title>aeneamaeshun</title>
+        <title>animation-JQ</title>
         <link href="css/newcss.css" rel="stylesheet" type="text/css" />
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
